--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,14 +5,15 @@
   "editor.hover.enabled": false,
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
+    "source.organizeImports": true,
     "source.fixAll.stylelint": true,
     "source.fixAll.eslint": true
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.guides.bracketPairs": true,
   "git.ignoreLimitWarning": true,
-  "stylelint.validate": ["css", "scss"],
+  "eslint.run": "onSave",
+  "stylelint.validate": ["css", "scss", "less", "postcss"],
   "css.validate": false,
-  "scss.validate": false,
-  "vetur.format.enable": false
+  "scss.validate": false
 }
