--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
-    "nuxt": "3.0.0-rc.11",
+    "nuxt": "^3.0.0",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.5",
@@ -29,6 +29,6 @@
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
     "typescript": "^4.8.2",
-    "vuetify": "^3.0.0-beta.13"
+    "vuetify": "^3.0.1"
   }
 }
