--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@mdi/font": "^7.0.96",
     "@mdi/js": "^7.0.96",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
-    "nuxt": "^3.0.0",
+    "nuxt": "^3.1.1",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.5",
@@ -29,6 +30,7 @@
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
     "typescript": "^4.8.2",
-    "vuetify": "^3.0.3"
+    "vite-plugin-vuetify": "^1.0.2",
+    "vuetify": "^3.1.3"
   }
 }
