--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "nuxt": "^3.3.2",
+    "nuxt": "~3.3.0",
     "postcss-html": "^1.5.0",
     "prettier": "^2.8.7",
     "sass": "^1.60.0",
