--- a/package.json
+++ b/package.json
@@ -13,24 +13,21 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
-    "@mdi/js": "^7.2.96",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@types/node": "^18.15.9",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "eslint": "^8.36.0",
+    "@types/node": "^20.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-nuxt": "^4.0.0",
-    "nuxt": "~3.3.0",
+    "nuxt": "^3.6.1",
     "postcss-html": "^1.5.0",
-    "prettier": "^2.8.7",
-    "sass": "^1.60.0",
-    "stylelint": "^15.3.0",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recess-order": "^4.0.0",
-    "stylelint-config-standard-scss": "^7.0.1",
-    "typescript": "^5.0.2",
+    "prettier": "^2.8.8",
+    "sass": "^1.63.6",
+    "stylelint": "^15.9.0",
+    "stylelint-config-recess-order": "^4.2.0",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "typescript": "^5.1.6",
     "vite-plugin-vuetify": "^1.0.2",
-    "vuetify": "^3.2.4"
+    "vuetify": "^3.3.6"
   }
 }
