--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
+    "@nuxtjs/critters": "^0.5.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/node": "^20.6.0",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
