--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
+    "@nuxt/devtools": "^0.8.3",
     "@nuxtjs/critters": "^0.5.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@types/node": "^20.6.0",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
+    "@types/node": "^20.6.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
-    "nuxt": "^3.7.1",
+    "nuxt": "^3.7.3",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
-    "sass": "^1.66.1",
+    "sass": "^1.67.0",
     "stylelint": "^15.10.3",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard-scss": "^11.0.0",
     "typescript": "^5.2.2",
     "vite-plugin-vuetify": "^1.0.2",
-    "vuetify": "^3.3.15"
+    "vuetify": "^3.3.16"
   }
 }
