--- a/package.json
+++ b/package.json
@@ -13,23 +13,29 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
-    "@nuxt/devtools": "^0.8.3",
-    "@nuxtjs/critters": "^0.5.0",
+    "@nuxt/devtools": "^0.8.5",
+    "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@types/node": "^20.6.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "^8.49.0",
+    "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
+    "@vue/test-utils": "^2.4.1",
+    "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
-    "nuxt": "^3.7.3",
+    "jsdom": "^22.1.0",
+    "nuxt": "^3.7.4",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
-    "sass": "^1.67.0",
+    "sass": "^1.68.0",
     "stylelint": "^15.10.3",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard-scss": "^11.0.0",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.16.6",
     "vite-plugin-vuetify": "^1.0.2",
-    "vuetify": "^3.3.16"
+    "vitest": "^0.34.6",
+    "vuetify": "^3.3.19"
   }
 }
