--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,6 @@
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
     "types": ["vitest/globals"]
-  }
+  },
+  "include": ["**/*.{ts,vue}", "**/*.{spec,test}.ts"]
 }
