--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,5 @@
 {
   // https://v3.nuxtjs.org/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "types": ["vitest/globals"]
-  },
-  "include": ["**/*.{ts,vue}", "**/*.{spec,test}.ts"]
+  "exclude": ["test/**/*.{spec,test}.{ts,js}"]
 }
