--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@nuxt/devtools": "^1.0.0-beta.0",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@storybook/addon-essentials": "^7.4.5",
-    "@storybook/addon-interactions": "^7.4.5",
-    "@storybook/addon-links": "^7.4.5",
-    "@storybook/blocks": "^7.4.5",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/blocks": "^7.4.6",
     "@storybook/testing-library": "^0.2.1",
-    "@storybook/vue3": "^7.4.5",
-    "@storybook/vue3-vite": "^7.4.5",
+    "@storybook/vue3": "^7.4.6",
+    "@storybook/vue3-vite": "^7.4.6",
     "@types/node": "^20.8.0",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
@@ -44,7 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.0",
-    "storybook": "^7.4.5",
+    "storybook": "^7.4.6",
     "stylelint": "^15.10.3",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard-scss": "^11.0.0",
@@ -54,5 +54,11 @@
     "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.34.6",
     "vuetify": "^3.3.20"
+  },
+  "workspaces": {
+    "nohoist": [
+      "**/.storybook",
+      "**/.storybook/**"
+    ]
   }
 }
