[chore] upgrade library

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
-    "@nuxt/devtools": "^1.0.0-beta.0",
+    "@nuxt/devtools": "^1.0.0-beta.3",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/storybook": "^7.0.0",
     "@storybook/addon-essentials": "^7.4.6",
     "@storybook/addon-interactions": "^7.4.6",
     "@storybook/addon-links": "^7.4.6",
@@ -28,9 +29,9 @@
     "@storybook/testing-library": "^0.2.1",
     "@storybook/vue3": "^7.4.6",
     "@storybook/vue3-vite": "^7.4.6",
-    "@types/node": "^20.8.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
+    "@types/node": "^20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "@vitest/coverage-v8": "^0.34.6",
     "@vitest/ui": "^0.34.6",
     "@vue/test-utils": "^2.4.1",
@@ -43,9 +44,9 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.0",
+    "sass": "^1.69.4",
     "storybook": "^7.4.6",
-    "stylelint": "^15.10.3",
+    "stylelint": "^15.11.0",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard-scss": "^11.0.0",
     "typescript": "^5.2.2",
@@ -53,7 +54,7 @@
     "unplugin-vue-components": "^0.25.2",
     "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.34.6",
-    "vuetify": "^3.3.20"
+    "vuetify": "^3.3.22"
   },
   "workspaces": {
     "nohoist": [
