[chore] upgrade yarn and library

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@ node_modules
 .nitro
 .cache
 .output
+.yarn
 .env
 dist
+
+# vitest
 coverage
+
 auto-imports.d.ts
 components.d.ts
 package-lock.json
