--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "type": "module",
+  "packageManager": "yarn@3.6.4",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -18,7 +19,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
-    "@nuxt/devtools": "^1.0.0-beta.3",
+    "@nuxt/devtools": "1.0.0",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/storybook": "^7.0.0",
@@ -39,7 +40,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-storybook": "^0.6.14",
     "jsdom": "^22.1.0",
-    "nuxt": "^3.7.4",
+    "nuxt": "3.8.0",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
@@ -49,17 +50,11 @@
     "stylelint": "^15.11.0",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard-scss": "^11.0.0",
-    "typescript": "^5.2.2",
+    "typescript": "5.2.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vite-plugin-vuetify": "^1.0.2",
-    "vitest": "^0.34.6",
-    "vuetify": "^3.3.22"
-  },
-  "workspaces": {
-    "nohoist": [
-      "**/.storybook",
-      "**/.storybook/**"
-    ]
+    "vitest": "0.34.6",
+    "vuetify": "3.3.22"
   }
 }
