[chore] upgrade library

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,11 @@
-yarnPath: .yarn/releases/yarn-3.6.4.cjs
-nodeLinker: node-modules
-defaultSemverRangePrefix: ''
+compressionLevel: mixed
+
+defaultSemverRangePrefix: ""
+
+enableGlobalCache: false
+
 nmHoistingLimits: workspaces
+
+nodeLinker: node-modules
+
+yarnPath: .yarn/releases/yarn-4.0.0.cjs
