--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "private": true,
   "type": "module",
-  "packageManager": "yarn@3.6.4",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -18,43 +17,44 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@mdi/font": "^7.2.96",
+    "@mdi/font": "^7.3.67",
     "@nuxt/devtools": "1.0.0",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/storybook": "^7.0.0",
-    "@storybook/addon-essentials": "^7.4.6",
-    "@storybook/addon-interactions": "^7.4.6",
-    "@storybook/addon-links": "^7.4.6",
-    "@storybook/blocks": "^7.4.6",
-    "@storybook/testing-library": "^0.2.1",
-    "@storybook/vue3": "^7.4.6",
-    "@storybook/vue3-vite": "^7.4.6",
-    "@types/node": "^20.8.7",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/blocks": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/vue3": "^7.5.1",
+    "@storybook/vue3-vite": "^7.5.1",
+    "@types/node": "^20.8.9",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "@vitest/coverage-v8": "^0.34.6",
-    "@vitest/ui": "^0.34.6",
+    "@vitest/ui": "^0.34.7",
     "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.50.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-storybook": "^0.6.14",
+    "eslint-plugin-storybook": "^0.6.15",
     "jsdom": "^22.1.0",
-    "nuxt": "3.7.4",
+    "nuxt": "3.8.0",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.4",
-    "storybook": "^7.4.6",
+    "sass": "^1.69.5",
+    "storybook": "^7.5.1",
     "stylelint": "^15.11.0",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard-scss": "^11.0.0",
     "typescript": "5.2.2",
-    "unplugin-auto-import": "^0.16.6",
+    "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "vite-plugin-vuetify": "^1.0.2",
     "vitest": "0.34.6",
-    "vuetify": "3.3.22"
-  }
+    "vuetify": "3.3.23"
+  },
+  "packageManager": "yarn@4.0.0"
 }
