--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev --port 6006",
     "build-storybook": "storybook build"
   },
   "devDependencies": {
@@ -21,17 +21,19 @@
     "@nuxt/devtools": "1.0.0",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/storybook": "^7.0.0",
-    "@storybook/addon-essentials": "^7.5.1",
-    "@storybook/addon-interactions": "^7.5.1",
-    "@storybook/addon-links": "^7.5.1",
-    "@storybook/blocks": "^7.5.1",
+    "@nuxtjs/storybook": "7.0.0",
+    "@storybook-vue/nuxt": "0.1.9",
+    "@storybook/addon-essentials": "7.5.2",
+    "@storybook/addon-interactions": "7.5.2",
+    "@storybook/addon-links": "7.5.2",
+    "@storybook/blocks": "7.5.2",
+    "@storybook/builder-vite": "7.5.2",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/vue3": "^7.5.1",
-    "@storybook/vue3-vite": "^7.5.1",
-    "@types/node": "^20.8.9",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@storybook/vue3": "7.5.2",
+    "@storybook/vue3-vite": "^7.5.2",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "@vitest/coverage-v8": "^0.34.6",
     "@vitest/ui": "^0.34.7",
     "@vue/test-utils": "^2.4.1",
@@ -45,7 +47,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5",
-    "storybook": "^7.5.1",
+    "storybook": "7.5.2",
     "stylelint": "^15.11.0",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard-scss": "^11.0.0",
