[fix] fix config

--- a/compose.yml
+++ b/compose.yml
@@ -1,18 +1,18 @@
 version: '3.9'
 
+x-common-settings: &common-settings
+  build: .
+  volumes:
+    - .:/frontend:cached
+    - nuxt-node-modules:/frontend/node_modules:delegated
+  tty: true
+
 services:
   dev_nuxt:
     container_name: dev_nuxt
-    build:
-      context: .
-    volumes:
-      - .:/frontend:cached
-      - nuxt-node-modules:/frontend/node_modules:delegated
+    <<: *common-settings
     ports:
       - '3000:3000'
-    tty: true
-    environment:
-      - CHOKIDAR_USEPOLLING=true
     command: >
       sh -c `
       npm install &&
@@ -20,16 +20,10 @@ services:
       `
   prod_nuxt:
     container_name: prod_nuxt
-    build:
-      context: .
-    volumes:
-      - .:/frontend:cached
-      - nuxt-node-modules:/frontend/node_modules:delegated
+    <<: *common-settings
     ports:
       - '3001:3001'
-    tty: true
     environment:
-      - CHOKIDAR_USEPOLLING=true
       - PORT=3001
     command: >
       sh -c `
@@ -39,21 +33,18 @@ services:
       `
   storybook:
     container_name: storybook
-    build:
-      context: .
-    volumes:
-      - .:/frontend:cached
-      - nuxt-node-modules:/frontend/node_modules:delegated
+    <<: *common-settings
     ports:
       - '6006:6006'
-    tty: true
-    environment:
-      - CHOKIDAR_USEPOLLING=true
     command: >
       sh -c `
       npm install &&
       npm run storybook
       `
+  vitest:
+    container_name: vitest
+    <<: *common-settings
+    command: npm run test --exit
 
 volumes:
   nuxt-node-modules:
