--- a/package.json
+++ b/package.json
@@ -16,52 +16,46 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@mdi/font": "^7.3.67",
-    "@nuxt/devtools": "1.0.0",
-    "@nuxtjs/critters": "^0.5.1",
+    "@mdi/font": "^7.4.47",
+    "@nuxt/devtools": "1.0.8",
+    "@nuxtjs/critters": "^0.6.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/storybook": "7.0.0",
-    "@storybook-vue/nuxt": "0.1.9",
-    "@storybook/addon-essentials": "7.5.2",
-    "@storybook/addon-interactions": "7.5.2",
-    "@storybook/addon-links": "7.5.2",
-    "@storybook/blocks": "7.5.2",
-    "@storybook/builder-vite": "7.5.2",
+    "@storybook-vue/nuxt": "0.2.3-alpha.10",
+    "@storybook/addon-essentials": "7.6.17",
+    "@storybook/addon-interactions": "7.6.17",
+    "@storybook/addon-links": "7.6.17",
+    "@storybook/blocks": "7.6.17",
+    "@storybook/builder-vite": "7.6.17",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/vue3": "7.5.2",
-    "@storybook/vue3-vite": "7.5.2",
-    "@types/node": "^20.8.10",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitest/coverage-v8": "^0.34.6",
-    "@vitest/ui": "^0.34.7",
-    "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-storybook": "^0.6.15",
-    "jsdom": "^22.1.0",
-    "nuxt": "3.6.5",
-    "postcss-html": "^1.5.0",
-    "prettier": "^3.0.3",
+    "@storybook/vue3": "7.6.17",
+    "@storybook/vue3-vite": "7.6.17",
+    "@types/node": "^20.11.20",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vitest/ui": "^1.3.1",
+    "@vue/test-utils": "^2.4.4",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-storybook": "^0.8.0",
+    "jsdom": "^24.0.0",
+    "nuxt": "3.10.3",
+    "postcss-html": "^1.6.0",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.5",
-    "storybook": "7.5.2",
-    "stylelint": "^15.11.0",
-    "stylelint-config-recess-order": "^4.3.0",
-    "stylelint-config-standard-scss": "^11.0.0",
-    "typescript": "5.2.2",
-    "unplugin-auto-import": "^0.16.7",
-    "unplugin-vue-components": "^0.25.2",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vitest": "0.34.6",
-    "vuetify": "3.4.0"
+    "sass": "^1.71.1",
+    "storybook": "7.6.17",
+    "stylelint": "^16.2.1",
+    "stylelint-config-recess-order": "^4.6.0",
+    "stylelint-config-standard-scss": "^13.0.0",
+    "typescript": "5.3.3",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vite-plugin-vuetify": "^2.0.1",
+    "vitest": "1.3.1",
+    "vuetify": "3.5.5"
   },
-  "pnpm": {
-    "override": {
-      "@babel/plugin-proposal-class-properties": "npm:@babel/plugin-transform-class-properties",
-      "@babel/plugin-proposal-optional-chaining": "npm:@babel/plugin-transform-optional-chaining",
-      "@babel/plugin-proposal-nullish-coalescing-operator": "npm:@babel/plugin-transform-nullish-coalescing-operator"
-    }
-  }
+  "packageManager": "yarn@4.1.0"
 }
