--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,462 @@
-nodeLinker: node-modules
-defaultSemverRangePrefix: ''
-nmHoistingLimits: workspaces
+# yarn config -v
+# ├─ cacheFolder
+# │  ├─ 説明: キャッシュファイルが書き込まれるべきフォルダ
+# │  ├─ 出典: <内部>
+# │  └─ 値: '/Users/<username>/.yarn/berry/cache'
+# │
+# ├─ cacheMigrationMode
+# │  ├─ 説明: Yarnのアップグレードがキャッシュアーカイブの再生成を引き起こすべき条件を定義します。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'always'
+# │
+# ├─ changesetBaseRefs
+# │  ├─ 説明: 現在のHEADが変更を検出するために比較される基本git refs。gitのブランチ、タグ、コミットをサポートします。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: [ 'master', 'origin/master', ... 4つの追加項目 ]
+# │
+# ├─ changesetIgnorePatterns
+# │  ├─ 説明: グロブパターンの配列; これに一致するファイルは変更されたファイルをフェッチする際に無視されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: []
+# │
+# ├─ checksumBehavior
+# │  ├─ 説明: チェックサムが期待と一致しない場合に行うべきことを定義する列挙
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'throw'
+# │
+# ├─ cloneConcurrency
+# │  ├─ 説明: 同時に実行可能なクローンの最大数
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 2
+# │
+# ├─ compressionLevel
+# │  ├─ 説明: Zipファイルの圧縮レベル、0から9まで、またはmixed (圧縮が良い結果をもたらさない場合、一部のファイルを非圧縮で保存する9のバリアント)
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 0
+# │
+# ├─ constraintsPath
+# │  ├─ 説明: 制約ファイルのパス。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '/Users/<username>/<project_path>/constraints.pro'
+# │
+# ├─ defaultLanguageName
+# │  ├─ 説明: パッケージがどの言語モードを使用すべきかについて何も示さない場合に使用されるべきデフォルトの言語モード
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'node'
+# │
+# ├─ defaultProtocol
+# │  ├─ 説明: 純粋なsemverおよびタグ範囲を解決する際に使用されるデフォルトの解決プロトコル
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'npm:'
+# │
+# ├─ defaultSemverRangePrefix
+# │  ├─ 説明: デフォルトの保存プレフィックス: '^', '~' または ''
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '^'
+# │
+# ├─ deferredVersionFolder
+# │  ├─ 説明: バージョニングファイルが保存されるフォルダ
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '/Users/<username>/<project_path>/.yarn/versions'
+# │
+# ├─ enableColors
+# │  ├─ 説明: trueの場合、CLIは出力で色を使用することが許可されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableConstraintsChecks
+# │  ├─ 説明: trueの場合、インストール中に制約が実行されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ enableGlobalCache
+# │  ├─ 説明: trueの場合、`cache-folder`に関係なくシステム全体のキャッシュフォルダが使用されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableHardenedMode
+# │  ├─ 説明: trueの場合、インストール時に自動的に--check-resolutions --refresh-lockfileが有効になります
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ enableHyperlinks
+# │  ├─ 説明: trueの場合、CLIは出力でハイパーリンクを使用することが許可されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableImmutableCache
+# │  ├─ 説明: trueの場合、キャッシュは不変とみなされ、それを変更しようとするアクションは例外を投げます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ enableImmutableInstalls
+# │  ├─ 説明: true（CI上のデフォルト）の場合、インストールコマンドがロックファイルを変更することを防ぎます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ enableInlineBuilds
+# │  ├─ 説明: trueの場合、CLIはビルド出力をコマンドライン上に表示します
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ enableInlineHunks
+# │  ├─ 説明: trueの場合、インストールは一致しないパッチhunksを表示します
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ enableMessageNames
+# │  ├─ 説明: trueの場合、CLIはほとんどのメッセージに検索エンジンに適したコードをプレフィックスとして付けます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableMirror
+# │  ├─ 説明: trueの場合、ダウンロードされたパッケージはローカルとグローバルの両方のフォルダに取得され、保存されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableNetwork
+# │  ├─ 説明: falseの場合、Yarnは必要に応じてネットワークを使用することを拒否します
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableOfflineMode
+# │  ├─ 説明: trueの場合、Yarnはファイルとメタデータをネットワークではなくグローバルキャッシュから取得しようとします
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ enableProgressBars
+# │  ├─ 説明: trueの場合、CLIは長時間実行されるイベントの進行状況バーを表示することが許可されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableScripts
+# │  ├─ 説明: trueの場合、パッケージはデフォルトでインストールスクリプトを持つことが許可されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableStrictSettings
+# │  ├─ 説明: trueの場合、未知の設定はYarnを中断させます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableStrictSsl
+# │  ├─ 説明: falseの場合、SSL証明書のエラーは無視されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableTelemetry
+# │  ├─ 説明: trueの場合、テレメトリーは定期的に送信されます。ルールは https://yarnpkg.com/advanced/telemetry に従います
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableTimers
+# │  ├─ 説明: trueの場合、CLIはコマンドの実行に費やされた時間を表示することが許可されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableTips
+# │  ├─ 説明: trueの場合、インストールは毎週の日に役立つメッセージを表示します
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ enableTransparentWorkspaces
+# │  ├─ 説明: falseの場合、Yarnは`workspace:`プロトコルを使用しない限り、自動的にワークスペース依存関係を解決しません
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ globalFolder
+# │  ├─ 説明: すべてのシステム全体のファイルが保存されるフォルダ
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '/Users/<username>/.yarn/berry'
+# │
+# ├─ httpProxy
+# │  ├─ 説明: 外部httpリクエストに使用されるべきhttpプロキシのURL
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ httpRetry
+# │  ├─ 説明: http失敗時のリトライ回数
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 3
+# │
+# ├─ httpTimeout
+# │  ├─ 説明: 各httpリクエストのタイムアウト（ミリ秒）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 60000
+# │
+# ├─ httpsCaFilePath
+# │  ├─ 説明: 一つまたは複数の認証局署名証明書を含むファイルへのパス
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ httpsCertFilePath
+# │  ├─ 説明: PEM形式の証明書チェーンを含むファイルへのパス
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ httpsKeyFilePath
+# │  ├─ 説明: PEM形式の秘密鍵を含むファイルへのパス
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ httpsProxy
+# │  ├─ 説明: 外部httpsリクエストに使用されるべきhttpプロキシのURL
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ ignorePath
+# │  ├─ 説明: trueの場合、グローバルな実行可能ファイルを使用しているときにローカルの実行可能ファイルは無視されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ immutablePatterns
+# │  ├─ 説明: グロブパターンの配列; 不変のインストール中にこれらに一致するファイルの変更が許可されません
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: []
+# │
+# ├─ initEditorConfig
+# │  ├─ 説明: ジェネレーターeditorconfigで定義される追加のルール
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: undefined
+# │
+# ├─ initFields
+# │  ├─ 説明: initコマンドを通じてパッケージを作成する際に設定される追加のフィールド
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: undefined
+# │
+# ├─ initScope
+# │  ├─ 説明: initコマンドを通じてパッケージを作成する際に使用されるスコープ
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ injectEnvironmentFiles
+# │  ├─ 説明: Yarnがプロセスを開始するときに注入すべきすべての環境ファイルのリスト
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: [ '.env.yarn?' ]
+# │
+# ├─ installStatePath
+# │  ├─ 説明: インストール状態が保存されるファイルのパス
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '/Users/<username>/<project_path>/.yarn/install-state.gz'
+# │
+# ├─ lastUpdateCheck
+# │  ├─ 説明: 新しいYarnバージョンが利用可能かどうかをチェックした最後のタイムスタンプ
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ logFilters
+# │  ├─ 説明: ログレベルのオーバーライド
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: []
+# │
+# ├─ networkConcurrency
+# │  ├─ 説明: 同時に実行可能なリクエストの最大数
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 50
+# │
+# ├─ networkSettings
+# │  ├─ 説明: ホスト名ごとのネットワーク設定（グロブパターンがサポートされています）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: undefined
+# │
+# ├─ nmHoistingLimits
+# │  ├─ 説明: パッケージが特定のレベルを超えて持ち上げられることを防ぎます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'none'
+# │
+# ├─ nmMode
+# │  ├─ 説明: Yarnが`node_modules`ディレクトリを生成する際に、ハードリンクとシンボリックリンクをどの程度使用するかを定義します。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'classic'
+# │
+# ├─ nmSelfReferences
+# │  ├─ 説明: リンカーがワークスペースのために自己参照シンボリックリンクを生成するかどうかを定義します。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ nodeLinker
+# │  ├─ 説明: Nodeパッケージをインストールするために使用されるリンカー。"pnp"、"pnpm"、または"node-modules"のいずれか
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'pnp'
+# │
+# ├─ npmAlwaysAuth
+# │  ├─ 説明: 選択されたnpmレジストリのURL（注: npmエンタープライズはサポートされていません）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ npmAuditExcludePackages
+# │  ├─ 説明: npmオーディットから除外するパッケージのグロブパターンの配列
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: []
+# │
+# ├─ npmAuditIgnoreAdvisories
+# │  ├─ 説明: npmオーディットから除外するアドバイザリーIDのグロブパターンの配列
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: []
+# │
+# ├─ npmAuditRegistry
+# │  ├─ 説明: オーディットレポートのために問い合わせるレジストリ
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ npmAuthIdent
+# │  ├─ 説明: npmレジストリのための認証ID（npmおよびyarn v1での_auth）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ npmAuthToken
+# │  ├─ 説明: npmレジストリのための認証トークン（npmおよびyarn v1での_authToken）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ npmPublishAccess
+# │  ├─ 説明: 公開パッケージのデフォルトアクセス
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ npmPublishRegistry
+# │  ├─ 説明: パッケージをプッシュするレジストリ
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ npmRegistries
+# │  ├─ 説明: レジストリごとの設定
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: undefined
+# │
+# ├─ npmRegistryServer
+# │  ├─ 説明: 選択されたnpmレジストリのURL（注: npmエンタープライズはサポートされていません）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'https://registry.yarnpkg.com'
+# │
+# ├─ npmScopes
+# │  ├─ 説明: パッケージスコープごとの設定
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: undefined
+# │
+# ├─ packageExtensions
+# │  ├─ 説明: 依存関係ツリーに適用するパッケージの修正のマップ
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: undefined
+# │
+# ├─ patchFolder
+# │  ├─ 説明: パッチファイルが書き込まれるべきフォルダ
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '/Users/<username>/<project_path>/.yarn/patches'
+# │
+# ├─ pnpEnableEsmLoader
+# │  ├─ 説明: trueの場合、YarnはESMローダー（`.pnp.loader.mjs`）を生成します。これが明示的に設定されていない場合、YarnはESMサポートが必要かどうかを自動的に検出しようとします。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ pnpEnableInlining
+# │  ├─ 説明: trueの場合、PnPデータは生成されたローダーと一緒にインラインで提供されます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: true
+# │
+# ├─ pnpFallbackMode
+# │  ├─ 説明: trueの場合、生成されたPnPローダーはトップレベルのフォールバックルールに従います
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'dependencies-only'
+# │
+# ├─ pnpIgnorePatterns
+# │  ├─ 説明: グロブパターンの配列; これに一致するファイルはクラシック解決を使用します
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: []
+# │
+# ├─ pnpMode
+# │  ├─ 説明: 'strict'の場合、標準のPnPマップを生成します。'loose'の場合、それらをn_m解決と統合します。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'strict'
+# │
+# ├─ pnpShebang
+# │  ├─ 説明: 生成されたPnPスクリプトに前置する文字列
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '#!/usr/bin/env node'
+# │
+# ├─ pnpUnpluggedFolder
+# │  ├─ 説明: アンプラグドパッケージが保存されるべきフォルダ
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '/Users/<username>/<project_path>/.yarn/unplugged'
+# │
+# ├─ preferDeferredVersions
+# │  ├─ 説明: trueの場合、`yarn version`の実行は`--deferred`フラグを仮定します。`--immediate`が設定されていない限り
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ preferInteractive
+# │  ├─ 説明: trueの場合、CLIはTTYから呼び出されたときに自動的にインタラクティブモードを使用します
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ preferReuse
+# │  ├─ 説明: trueの場合、`yarn add`は他のワークスペースで最も一般的に使用される依存関係範囲を再利用しようとします。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ preferTruncatedLines
+# │  ├─ 説明: trueの場合、CLIはターミナルのサイズを超える行を切り詰めます
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: false
+# │
+# ├─ progressBarStyle
+# │  ├─ 説明: どのスタイルの進行状況バーを使用するか（進行状況バーが有効な場合のみ）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: undefined
+# │
+# ├─ rcFilename
+# │  ├─ 説明: 設定が見つかるファイルの名前
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '.yarnrc.yml'
+# │
+# ├─ supportedArchitectures
+# │  ├─ 説明: Yarnがフェッチしてリゾルバに注入するアーキテクチャ
+# │  ├─ 出典: <デフォルト>
+# │  ├─ os: [ 'current' ]
+# │  ├─ cpu: [ 'current' ]
+# │  └─ libc: [ 'current' ]
+# │
+# ├─ taskPoolConcurrency
+# │  ├─ 説明: 重いタスク処理の同時実行の最大量
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 8
+# │
+# ├─ taskPoolMode
+# │  ├─ 説明: 重いタスクの実行戦略
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'workers'
+# │
+# ├─ telemetryInterval
+# │  ├─ 説明: 2回のテレメトリーアップロード間の最小時間（日数）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 7
+# │
+# ├─ telemetryUserId
+# │  ├─ 説明: どのプロジェクトであるかを私たちに知らせたい場合、このフィールドを設定できます。完全に任意でオプトインです。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ tsEnableAutoTypes
+# │  ├─ 説明: Yarnが`yarn add`の際に自動的に@types/依存関係をインストールするかどうか
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: null
+# │
+# ├─ unsafeHttpWhitelist
+# │  ├─ 説明: httpクエリが許可されるホスト名のリスト（グロブパターンがサポートされています）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: []
+# │
+# ├─ virtualFolder
+# │  ├─ 説明: 仮想パッケージ（cf doc）がディスク上にマッピングされるフォルダ（__virtual__と命名する必要があります）
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: '/Users/<username>/<project_path>/.yarn/__virtual__'
+# │
+# ├─ winLinkType
+# │  ├─ 説明: YarnがWindows上でリンクを作成する際にWindowsジャンクションまたはシンボリックリンクを使用するかどうか。
+# │  ├─ 出典: <デフォルト>
+# │  └─ 値: 'junctions'
+# │
+# └─ yarnPath
+#    ├─ 説明: グローバルなものを使用する際に優先されるべきローカル実行可能ファイルへのパス
+#    ├─ 出典: <デフォルト>
+#    └─ 値: null
