--- a/package.json
+++ b/package.json
@@ -16,45 +16,31 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
-    "@nuxt/devtools": "1.0.8",
-    "@nuxtjs/critters": "^0.6.0",
+    "@nuxt/devtools": "^1.2.0",
+    "@nuxtjs/critters": "^0.7.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/storybook": "7.0.0",
-    "@storybook-vue/nuxt": "0.2.3-alpha.10",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addon-interactions": "7.6.17",
-    "@storybook/addon-links": "7.6.17",
-    "@storybook/blocks": "7.6.17",
-    "@storybook/builder-vite": "7.6.17",
-    "@storybook/testing-library": "^0.2.2",
-    "@storybook/vue3": "7.6.17",
-    "@storybook/vue3-vite": "7.6.17",
-    "@types/node": "^20.11.20",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "@vitest/coverage-v8": "^1.3.1",
-    "@vitest/ui": "^1.3.1",
-    "@vue/test-utils": "^2.4.4",
-    "eslint": "^8.56.0",
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "@vitest/coverage-v8": "^1.5.0",
+    "@vitest/ui": "^1.5.0",
+    "@vue/test-utils": "^2.4.5",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-storybook": "^0.8.0",
     "jsdom": "^24.0.0",
-    "nuxt": "3.10.3",
+    "nuxt": "^3.11.2",
     "postcss-html": "^1.6.0",
     "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "sass": "^1.71.1",
-    "storybook": "7.6.17",
-    "stylelint": "^16.2.1",
-    "stylelint-config-recess-order": "^4.6.0",
-    "stylelint-config-standard-scss": "^13.0.0",
-    "typescript": "5.3.3",
+    "stylelint": "^16.3.1",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite-plugin-vuetify": "^2.0.1",
-    "vitest": "1.3.1",
-    "vuetify": "3.5.5"
+    "vite-plugin-vuetify": "^2.0.3",
+    "vitest": "^1.5.0",
+    "vuetify": "^3.5.16"
   },
   "packageManager": "yarn@4.1.0"
 }
