[fix] fix settings

--- a/compose.yml
+++ b/compose.yml
@@ -4,6 +4,7 @@ x-common-settings: &common-settings
   build: .
   volumes:
     - .:/frontend:cached
+    - nuxt-node-modules:/frontend/node_modules:delegated
   tty: true
 
 services:
@@ -12,7 +13,7 @@ services:
     <<: *common-settings
     ports:
       - '3000:3000'
-    command: sh -c "yarn run dev --port 3000"
+    command: sh -c "npm run dev --port 3000"
     env_file: .env
     environment:
       - HOST=0.0.0.0
@@ -21,7 +22,7 @@ services:
     <<: *common-settings
     ports:
       - '3001:3001'
-    command: sh -c "yarn run build && node .output/server/index.mjs"
+    command: sh -c "npm run build && node .output/server/index.mjs"
     env_file: .env
     environment:
       - HOST=0.0.0.0
@@ -30,7 +31,7 @@ services:
     container_name: vitest
     <<: *common-settings
     env_file: .env
-    command: sh -c "yarn run test --exit"
+    command: sh -c "npm run test --exit"
 
 volumes:
   nuxt-node-modules:
